[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-kyra"
version = "1.0.0"
description = "Kyra governance SDK for LangChain, CrewAI, and LangGraph agents"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
crewai    = ["crewai>=0.28"]
langgraph = ["langgraph>=0.1"]
all       = ["langchain-core>=0.2", "crewai>=0.28", "langgraph>=0.1"]
dev       = ["pytest", "pytest-asyncio", "respx", "langchain-core"]
